[package]
name = "stream-channel"
version = "0.1.0"
edition = "2021"
authors = ["gipsyh <gipsyh.icu@gmail.com>"]
repository = "https://github.com/gipsyh/stream-channel"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "stream in channel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
