[package]
name = "stream-channel"
version = "0.1.1"
edition = "2021"
authors = ["gipsyh <gipsyh.icu@gmail.com>"]
repository = "https://github.com/gipsyh/stream-channel"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "stream in channel"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.14.0", features = ["full"] }
tokio-util = "0.6.9"
